tests/_embed_harness/snapshots/go_run_direct.snap
---
source: tests/_embed_harness/render_go.rs
---
package main

import "fmt"

type N0 struct {
}
func (r N0) M() string {
	return "N0.M"
}

func main() {
	{
		var r N0
		fmt.Println(r.M())
		f := r.M
		fmt.Println(f())
	}
}
