tests/_embed_harness/snapshots/lis_declarations_diamond.snap
---
source: tests/_embed_harness/render_lis.rs
---
struct N0 {}
impl N0 {
  fn M(self) -> string {
    "N0.M"
  }
}

struct N1 {
  embed N0,
}

struct N2 {
  embed N0,
}

struct N3 {
  embed N1,
  embed N2,
}
