tests/_embed_harness/snapshots/lis_declarations_interface.snap
---
source: tests/_embed_harness/render_lis.rs
---
interface N0 {
  fn Speak(self) -> string
}

struct N1 {}
impl N1 {
  fn Speak(self) -> string {
    "N1.Speak"
  }
}
