tests/_embed_harness/snapshots/lis_questions_satisfaction.snap
---
source: tests/_embed_harness/render_lis.rs
---
pub interface N0 {
  fn Speak() -> string
}

struct N1 {}
impl N1 {
  pub fn Speak(self) -> string {
    "N1.Speak"
  }
}

struct N2 {
  embed N1,
}

fn __sink_N0(_v: N0) {
}

fn __sat_v_0(x: N2) {
  __sink_N0(x)
}

fn __sat_p_0(x: Ref<N2>) {
  __sink_N0(x)
}
