tests/_embed_harness/snapshots/lis_questions_value_embed.snap
---
source: tests/_embed_harness/render_lis.rs
---
struct N0 {}
impl N0 {
  fn M(self) -> string {
    "N0.M"
  }
}

struct N1 {
  embed N0,
}

fn __sel_0(r: Ref<N1>) {
  let _ = r.M()
}
