tests/_embed_harness/snapshots/lis_run_direct.snap
---
source: tests/_embed_harness/render_lis.rs
---
import "go:fmt"

struct N0 {}
impl N0 {
  fn M(self) -> string {
    "N0.M"
  }
}

fn main() {
  let r0 = N0 { .. }
  fmt.Println(r0.M())
  let f0 = r0.M
  fmt.Println(f0())
}
